Updated card header to extend length of row

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     
     <main>
         <container>
-            <div class="row">
+            <div class="row" style="margin-left: 5px;">
                 <div class="col-sm-3 card">
-                    <div class="card-header"><h5>City & Date</h5></div>
+                    <div id="expandHeader" class="card-header"><h5>City & Date</h5></div>
                     <br>
                     <form class="form-inline">
                         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
