Updated icons and added empty function

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
                 <div class="col-sm-3 card">
                     <div id="expandHeader" class="card-header"><h5>City</h5></div>
                     <br>
+                    <div>Explanation goes here. </div>
+                    <br>
                     <form class="form-inline">
                         <input class="form-control mr-sm-2" id="city-search" type="text" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success my-2 my-sm-0" id="search-button" type="button">Search</button>
@@ -37,48 +39,12 @@
                     <div class="row card">
                         <h5 class="card-header" id="cityDate">City & Date</h5>
                         <div class="card-body" id="selectedCity">
-                          <p class="card-text">UV Index:</p>
                         </div>
                       </div>
 
                     <br>
 
                     <div class="row" id="weatherCards">
-                        <div class="col-sm-2 card text-white bg-primary mb-3" id="weatherCardOne" style="max-width: 18rem;">
-                            <div class="card-header">Date</div>
-                            <div class="card-body">
-                              <p class="card-text">Temp:</p>
-                              <p class="card-text">Humidity:</p>
-                            </div>
-                        </div>
-                        <div class="col-sm-2 card text-white bg-primary mb-3" id="weatherCardTwo" style="max-width: 18rem;">
-                            <div class="card-header">Date</div>
-                            <div class="card-body">
-                              <p class="card-text">Temp:</p>
-                              <p class="card-text">Humidity:</p>
-                            </div>
-                        </div>
-                        <div class="col-sm-2 card text-white bg-primary mb-3" id="weatherCardThree" style="max-width: 18rem;">
-                            <div class="card-header">Date</div>
-                            <div class="card-body">
-                              <p class="card-text">Temp:</p>
-                              <p class="card-text">Humidity:</p>
-                            </div>
-                        </div>
-                        <div class="col-sm-2 card text-white bg-primary mb-3" id="weatherCardFour" style="max-width: 18rem;">
-                            <div class="card-header">Date</div>
-                            <div class="card-body">
-                              <p class="card-text">Temp:</p>
-                              <p class="card-text">Humidity:</p>
-                            </div>
-                        </div>
-                        <div class="col-sm-2 card text-white bg-primary mb-3" id="weatherCardFive" style="max-width: 18rem;">
-                            <div class="card-header">Date</div>
-                            <div class="card-body">
-                              <p class="card-text">Temp:</p>
-                              <p class="card-text">Humidity:</p>
-                            </div>
-                        </div>
 
                     </div>
                 </div>
