Separated out functions for history buttons and for render new button

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <container>
             <div class="row" style="margin-left: 5px;">
                 <div class="col-sm-3 card">
-                    <div id="expandHeader" class="card-header"><h5>City</h5></div>
+                    <div id="expandHeader" class="card-header"><h5>City Search</h5></div>
                     <br>
-                    <div>Explanation goes here. </div>
+                    <div id="explain">Search cities to find weather information.</div>
                     <br>
                     <form class="form-inline">
                         <input class="form-control mr-sm-2" id="city-search" type="text" placeholder="Search" aria-label="Search">
