--- a/index.html
+++ b/index.html
@@ -1,38 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Dashboard</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css">
 </head>
+
 <body>
     <header>
         <nav class="navbar">
-        <span class="h1">Weather Dashboard</span>
-      </nav>
+            <span class="h1">Weather Dashboard</span>
+        </nav>
     </header>
-    
+
     <main>
         <container>
             <div class="row" style="margin-left: 5px;">
                 <div class="col-sm-3 card">
-                    <div id="expandHeader" class="card-header"><h5>City Search</h5></div>
+                    <div id="expandHeader" class="card-header">
+                        <h5>City Search</h5>
+                    </div>
                     <br>
                     <div id="explain">Search cities to find weather information.</div>
                     <br>
                     <form class="form-inline">
-                        <input class="form-control mr-sm-2" id="city-search" type="text" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success my-2 my-sm-0" id="search-button" type="button">Search</button>
+                        <input class="form-control mr-sm-2" id="city-search" type="text" placeholder="Search"
+                            aria-label="Search">
+                        <button class="btn btn-outline-success my-2 my-sm-0" id="search-button"
+                            type="button">Search</button>
                     </form>
                     <br>
 
                     <div class="card" style="width: 18rem;">
                         <ul class="list-group list-group-flush" id="history">
-                          
+
                         </ul>
-                      </div>
+                    </div>
 
                 </div>
                 <div class="col">
@@ -40,7 +47,7 @@
                         <h5 class="card-header" id="cityDate">City & Date</h5>
                         <div class="card-body" id="selectedCity">
                         </div>
-                      </div>
+                    </div>
 
                     <br>
 
@@ -55,4 +62,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="assets/script.js"></script>
 </body>
+
 </html>
